--- a/RegExp.ipynb
+++ b/RegExp.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCd1ZzqrmZqQYKDuTU3YOC"
+      "authorship_tag": "ABX9TyOsPCsKBBKcSER2CenhYN9p",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/geopr2030/RegExp/blob/main/RegExp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 57,
@@ -83,6 +94,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Text from wikipedia to extract information\n",
         "text='''Born\tMukesh Dhirubhai Ambani\n",
         "19 April 1957 (age 67)\n",
         "Aden, Colony of Aden\n",
@@ -128,9 +140,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ai6vfg868bf2",
-        "outputId": "e45963e3-0855-4f06-d462-a8d836135fe5"
+        "outputId": "866072eb-ed15-40d5-b62c-bcf8a594f388"
       },
-      "execution_count": 63,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,7 +156,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 64
         }
       ]
     }
